<resources>
    <string name="app_name">MyMovie4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_movie_label">MOVIE</string>
    <string name="tab_tv_show_label">TV SHOW</string>
    <string name="overview">Overview</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="basic_information">Basic Information</string>
    <string name="language">Language</string>
    <string name="original_title">Original Title</string>
    <string name="release">Release</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to favorite</string>
</resources>
