<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    android:background="#333333"
    tools:context=".view.activity.DetailMovieActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
            android:id="@+id/google_progress_bar_detail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imageview_movie"
            android:visibility="gone"
            gpb:type="folding_circles"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageview_movie"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="fitXY"
            android:src="@android:color/darker_gray"
            android:layout_margin="8dp"
            app:riv_corner_radius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textview_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            tools:text="7.5"
            android:drawableStart="@drawable/ic_star_white_24dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintEnd_toEndOf="@id/imageview_movie"
            app:layout_constraintBottom_toBottomOf="@id/imageview_movie"/>
        <TextView
            android:id="@+id/basic_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/basic_information"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintTop_toBottomOf="@id/imageview_movie"
            app:layout_constraintStart_toStartOf="@id/imageview_movie"
            app:layout_constraintEnd_toEndOf="@id/imageview_movie"/>
        <TextView
            android:id="@+id/original_title"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/original_title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintTop_toBottomOf="@+id/basic_information"
            app:layout_constraintStart_toStartOf="@id/basic_information"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="@id/basic_information"/>

        <TextView
            android:id="@+id/textview_original_title_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/google_sans_regular"
            tools:text="Ip Man"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/original_title"
            app:layout_constraintTop_toBottomOf="@id/basic_information"/>
        <TextView
            android:id="@+id/language"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintTop_toBottomOf="@+id/original_title"
            app:layout_constraintStart_toStartOf="@id/original_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="@id/original_title"/>
        <TextView
            android:id="@+id/textview_language_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/google_sans_regular"
            tools:text="en"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/language"
            app:layout_constraintTop_toBottomOf="@id/textview_original_title_movie"/>
        <TextView
            android:id="@+id/release"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintTop_toBottomOf="@+id/language"
            app:layout_constraintStart_toStartOf="@id/language"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="@id/language"/>
        <TextView
            android:id="@+id/textview_release_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/google_sans_regular"
            tools:text="2019-02-10"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/release"
            app:layout_constraintTop_toBottomOf="@id/textview_language_movie"/>
        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/overview"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintTop_toBottomOf="@id/release"
            app:layout_constraintStart_toStartOf="@id/release"
            app:layout_constraintEnd_toEndOf="@id/release"/>
        <TextView
            android:id="@+id/textview_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            tools:text="asasndskdbsbfhfh"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            app:layout_constraintStart_toStartOf="@id/overview"
            app:layout_constraintEnd_toEndOf="@id/overview"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>